; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_toshiba_acpi.c_hci_get_bt_present.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_toshiba_acpi.c_hci_get_bt_present.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HCI_WIRELESS = common dso_local global i32 0, align 4
@HCI_SUCCESS = common dso_local global i64 0, align 8
@HCI_WIRELESS_BT_PRESENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*)* @hci_get_bt_present to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @hci_get_bt_present(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  store i64 0, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %6 = load i32, i32* @HCI_WIRELESS, align 4
  %7 = call i32 @hci_read2(i32 %6, i64* %4, i64* %5, i64* %3)
  %8 = load i64, i64* %3, align 8
  %9 = load i64, i64* @HCI_SUCCESS, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %19

11:                                               ; preds = %1
  %12 = load i64, i64* %4, align 8
  %13 = load i64, i64* @HCI_WIRELESS_BT_PRESENT, align 8
  %14 = and i64 %12, %13
  %15 = icmp ne i64 %14, 0
  %16 = zext i1 %15 to i64
  %17 = select i1 %15, i32 1, i32 0
  %18 = load i32*, i32** %2, align 8
  store i32 %17, i32* %18, align 4
  br label %19

19:                                               ; preds = %11, %1
  %20 = load i64, i64* %3, align 8
  ret i64 %20
}

declare dso_local i32 @hci_read2(i32, i64*, i64*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
